ha/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homeassistant
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
  - host: ha.p.cns.me
    http:
      paths:
      - backend:
          serviceName: homeassistant
          servicePort: http
